--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
     <li><a href=#Experience>Work</a></li>
     <li><a href="#">Projects</a></li>
     <li><a href="#">Blog</a></li>
+	<li><a href="#">Contact</a></li>
 </ul>    
     
     
