getting picture hover to work?

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 				
         function onHover()
             {
-                $(".prof_img").attr('src', 'images/prof11.png');
+                $(".prof_img").attr('src', 'images/prof11.PNG');
             }
 
             function offHover()
